crates/executors/tests/snapshots/droid_snapshots__hello_world_session.snap
---
source: crates/executors/tests/droid_snapshots.rs
expression: snapshot
---
log_event_converter:
  tool_map: {}
  model_reported: true
events:
  - AddEntry:
      timestamp: ~
      entry_type:
        type: system_message
      content: "model: gpt-5-codex"
      metadata: ~
  - AddEntry:
      timestamp: ~
      entry_type:
        type: user_message
      content: hello world
      metadata: ~
  - AddEntry:
      timestamp: ~
      entry_type:
        type: assistant_message
      content: "# Hello world!"
      metadata: ~
event_count: 3
