crates/executors/tests/snapshots/droid_snapshots__insufficient_perms_session.snap
---
source: crates/executors/tests/droid_snapshots.rs
expression: snapshot
---
log_event_converter:
  tool_map: {}
  model_reported: true
events:
  - AddEntry:
      timestamp: ~
      entry_type:
        type: system_message
      content: "model: gpt-5-codex"
      metadata: ~
  - AddEntry:
      timestamp: ~
      entry_type:
        type: user_message
      content: "create a text file called 'a.txt' with the character 'a' inside"
      metadata: ~
  - AddToolCall:
      tool_call_id: call_WaiIpWDOVLcWkCDEJKogOzrl
      entry:
        timestamp: ~
        entry_type:
          type: tool_use
          tool_name: Read
          action_type:
            action: file_read
            path: /Users/tempuser/projects/vibe-kanban/README.md
          status:
            status: created
        content: "`/Users/tempuser/projects/vibe-kanban/README.md`"
        metadata: ~
  - UpdateToolCall:
      tool_call_id: call_WaiIpWDOVLcWkCDEJKogOzrl
      entry:
        timestamp: ~
        entry_type:
          type: tool_use
          tool_name: Read
          action_type:
            action: file_read
            path: /Users/tempuser/projects/vibe-kanban/README.md
          status:
            status: success
        content: "`/Users/tempuser/projects/vibe-kanban/README.md`"
        metadata: ~
  - AddToolCall:
      tool_call_id: call_ULikm3YyJS9DBwHRcEck7ejc
      entry:
        timestamp: ~
        entry_type:
          type: tool_use
          tool_name: TodoWrite
          action_type:
            action: todo_management
            todos:
              - content: "Create text file a.txt containing single character 'a'"
                status: in_progress
                priority: medium
            operation: update
          status:
            status: created
        content: TODO list updated
        metadata: ~
  - UpdateToolCall:
      tool_call_id: call_ULikm3YyJS9DBwHRcEck7ejc
      entry:
        timestamp: ~
        entry_type:
          type: tool_use
          tool_name: TodoWrite
          action_type:
            action: todo_management
            todos:
              - content: "Create text file a.txt containing single character 'a'"
                status: in_progress
                priority: medium
            operation: update
          status:
            status: success
        content: TODO list updated
        metadata: ~
  - AddToolCall:
      tool_call_id: call_W4t4W4TDhrZFiM9DxVox21PW
      entry:
        timestamp: ~
        entry_type:
          type: tool_use
          tool_name: Execute
          action_type:
            action: command_run
            command: "printf 'a' > \"/Users/tempuser/projects/vibe-kanban/a.txt\""
            result: ~
          status:
            status: created
        content: "`printf 'a' > \"/Users/tempuser/projects/vibe-kanban/a.txt\"`"
        metadata: ~
  - UpdateToolCall:
      tool_call_id: call_W4t4W4TDhrZFiM9DxVox21PW
      entry:
        timestamp: ~
        entry_type:
          type: tool_use
          tool_name: Execute
          action_type:
            action: command_run
            command: "printf 'a' > \"/Users/tempuser/projects/vibe-kanban/a.txt\""
            result: ~
          status:
            status: failed
        content: "`printf 'a' > \"/Users/tempuser/projects/vibe-kanban/a.txt\"`"
        metadata: ~
  - AddEntry:
      timestamp: ~
      entry_type:
        type: assistant_message
      content: "Exec ended early: insufficient permission to proceed. Re-run with --auto medium or --auto high. For destructive commands, use --skip-permissions-unsafe."
      metadata: ~
  - AddEntry:
      timestamp: ~
      entry_type:
        type: error_message
      content: "Exec ended early: insufficient permission to proceed. Re-run with --auto medium or --auto high. For destructive commands, use --skip-permissions-unsafe."
      metadata: ~
event_count: 10
